# cxx_bridge

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  REAME.md  data_format.md  package.xml
include/cxx_bridge/: message_types.h  protobuf_server.hpp
proto/: joint_trajectory_dof6.proto  mesh.proto  point_cloud.proto  pose_array.proto
ros/: .gitignore  CMakeLists.txt
ros/src/: main.cpp  protobuf_server.cpp
ros2/: goblet.srdf  goblet.urdf  goblet.xacro  joint_state_publisher_params.yaml  run.bash  view.launch.py
ros2/rx160/: rx160_macro.xacro
ros2_server/: CMakeLists.txt  data_format.md  package.xml
ros2_server/include/cxx_bridge/: MagicNumbers.h  protobuf_server.hpp
ros2_server/src/: protobuf_server.cpp  ros_sender.cpp
rs-cxx-ros2-opw-bridge/: Cargo.toml  build.rs
rs-cxx-ros2-opw-bridge/src/: main.rs  sender.rs
rust/: Cargo.toml
src/: main.cpp  protobuf_server.cpp  ros_sender.cpp
