[package]
name = "rs-cxx-ros2-opw-bridge"
version = "0.0.1"
edition = "2021"
description = "A bridge between ROS 2 messaging (ROS2 project) and Rust standalone client using simple Protocol Buffers protocol"
repository = "https://github.com/bourumir-wyngs/cxx_bridge"

keywords = [
    "protobuf",         # Because you're using Protobuf for serialization
    "ros",
    "ros2",
    "robotics",
    "networking"
    ]

categories = [
    "network-programming",  # Because the library involves TCP communication
    "science::robotics"
]

[dependencies]
prost = "0.13.4"
nalgebra = "0.33"

[build-dependencies]
prost-build = "0.13"